--- a/static/eval.html
+++ b/static/eval.html
@@ -22,6 +22,16 @@
 		</tbody>
 	</table>
 
+	<div id="accuracyModal" class="modal fade bs-example-modal-lg" tabindex="-1" role="dialog" aria-hidden="true">
+		<div class="modal-dialog modal-lg">
+			<div class="modal-content">
+				<div class="modal-header">
+					<button type="button" class="close" data-dissmiss="modal" aria-hidden="true">x</button>
+				</div>
+			</div>
+		</div>
+	</div>
+
 	<script type="text/javascript" src="eval_data.json"></script>
 	<script type="text/javascript" src="eval.js"></script>
 </body>
