--- a/static/eval.html
+++ b/static/eval.html
@@ -10,42 +10,51 @@
 
 </head>
 <body>
-	<table class="table table-striped" id="eval-table">
-		<thead>
-			<th scope="col">img</th>
-			<th scope="col">gt</th>
-			<th scope="col">pred</th>
-			<th scope="col">accuracy</th>
-		</thead>
-		<tbody>
+	<div class="row">
+		<div class="col-sm-8">
 			
-		</tbody>
-	</table>
+			<table class="table table-striped" id="eval-table">
+				<thead>
+					<th scope="col">img</th>
+					<th scope="col">gt</th>
+					<th scope="col">pred</th>
+					<th scope="col">accuracy</th>
+				</thead>
+				<tbody>
+				</tbody>
+			</table>
 
-	<div id="individualAccuracyModal" class="modal fade bs-example-modal-lg" tabindex="-1" role="dialog" aria-hidden="true">
-		<div class="modal-dialog modal-lg">
-			<div class="modal-content">
-				<div class="modal-header">
-					<button type="button" class="close" data-dissmiss="modal" aria-hidden="true">x</button>
-					<h4 class="modal-title" id="individualAccuracyModalLabel">
-						Accuracy for each point
-					</h4>
-				</div>
-				<div class="modal-body">
-					<table id="individualAccuracyTable" class="table table-bordered">
-						<thead>
-							<th scope="col">point</th>
-							<th scope="col">gt</th>
-							<th scope="col">pred</th>
-							<th scope="col">difference</th>
-						</thead>
-					</table>
-				</div>
-				<div class="modal-footer">
-					<button class="btn btn-primary" data-dismiss="modal">Close</button>
+
+			<div id="individualAccuracyModal" class="modal fade bs-example-modal-lg" tabindex="-1" role="dialog" aria-hidden="tru">
+				<div class="modal-dialog modal-lg">
+					<div class="modal-content">
+						<div class="modal-header">
+							<button type="button" class="close" data-dissmiss="modal" aria-hidden="true">x</button>
+								<h4 class="modal-title" id="individualAccuracyModalLabel">
+									Accuracy for each point
+								</h4>
+						</div>
+						<div class="modal-body">
+							<table id="individualAccuracyTable" class="table table-bordered">
+								<thead>
+									<th scope="col">point</th>
+									<th scope="col">gt</th>
+									<th scope="col">pred</th>
+									<th scope="col">difference</th>
+								</thead>
+							</table>
+						</div>
+						<div class="modal-footer">
+							<button class="btn btn-primary" data-dismiss="modal">Close</button>
+						</div>
+					</div>
 				</div>
 			</div>
+		
 		</div>
+
+		<div class="col-sm-4">MSE GOES HERE</div>
+	
 	</div>
 
 	<script type="text/javascript" src="eval_data.json"></script>
